FIX: Corrected z-index and added background blur to secondary button

--- a/src/components/SplitScreen/SplitScreen.scss
+++ b/src/components/SplitScreen/SplitScreen.scss
@@ -119,7 +119,7 @@
   &__fade2 {
     position: absolute;
     left: 0;
-    z-index: 98;
+    z-index: 10;
   }
 
   &__fade1 {
