--- a/src/components/base/button/Button.scss
+++ b/src/components/base/button/Button.scss
@@ -60,6 +60,7 @@
   background: none;
   box-shadow: inset 0 0 0 50px rgb(255, 255, 255, 0.2);
   font-weight: var(--font--regular);
+  backdrop-filter: blur(2rem);
 
   &:hover {
     box-shadow: inset 0 0 0 2px white;
